Add a way to control display order of groups and subgroups. Change the default order of some subgroups. Make the Advanced Map page and Video Help Topics pages use this ordering. Remove obsolete code.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1774 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -13,7 +13,7 @@
 
                 <div class="three-col">
                     <h6>Go Botany</h6>
-                    <p><a href="{% url simplekey-page 1 %}"
+                    <p><a href="{% url simplekey %}"
                           >Simple Key</a> |
                         <a href="{% if ':8000' in request.META.HTTP_HOST %}http://127.0.0.1:8001/{% else %}https://myplants.newfs.org/{% endif %}">MyPlants</a> |
                         <a href="/advanced/">Advanced ID Tools</a> |
