--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -15,7 +15,7 @@
     <h3>For a shortcut through the plant groups, you can start here.</h3>
 
     <div id="plant-map-list">
-        {% for group in page.pilegroups.all %}
+        {% for group, subgroups in pilegroups %}
             <div class="plant-group{% if forloop.first %} first{% else %}{% if forloop.last %} last{% endif %}{% endif %}{% if group.friendly_title|length > 18 %} multi-line{% endif %}">
                 <h5>{{ group.friendly_title|lower|capfirst }}</h5>
                 <div class="image">
@@ -37,9 +37,9 @@
             </div>
         {% endfor %}
         <div class="clearit"></div>
-        {% for group in page.pilegroups.all %}
+        {% for group, subgroups in pilegroups %}
             <div class="subgroups hidden">
-                {% for subgroup in group.piles.all %}
+                {% for subgroup in subgroups %}
                     <div class="plant-subgroup{% if forloop.last %} last{% endif %}">
                         <h5>{{ subgroup.friendly_title|lower|capfirst }}</h5>
                         <div class="image">
