--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -31,7 +31,7 @@
                         New England plants! Observe closely, collect a
                         sample or take a photo, answer some questions,
                         and hone in on the correct identification.</p>
-                        <a href="{% url simplekey-page 1 %}"
+                        <a href="{% url simplekey %}"
                             id="cta">Get Started</a>
                     </div>
                 </div>
