--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div id="main">
                 <div id="breadcrumb">
-                    <p>You are here: <a href="{% url simplekey-page 1 %}">Simple Key</a>
+                    <p>You are here: <a href="{% url simplekey %}">Simple Key</a>
                     &gt; <span>{{ pilegroup.friendly_title }}</span></p>
                 </div>
                 
