--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -10,7 +10,7 @@
             <div class="container">
                 <div id="main">
 			        <a class="onward-btn"
-                        href="{% url simplekey-page 1 %}">Onward to
+                        href="{% url simplekey %}">Onward to
                         Simple Key</a>
 			
 			        <h2>Plants at Montshire</h2>
@@ -171,7 +171,7 @@
                         </ul>
                     </div><!-- // Closes .question -->
                     
-                    <a href="{% url simplekey-page 1 %}"
+                    <a href="{% url simplekey %}"
                         class="onward-btn">Onward to Simple Key</a>
                     <form>
                         <label class="got-it">
