--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -6,7 +6,7 @@
 
 {% block main_content %}			
     <a class="onward-btn"
-        href="{% url simplekey-page 1 %}">Onward to the Simple Key</a>
+        href="{% url simplekey %}">Onward to the Simple Key</a>
 
     <h2>Getting Started</h2>
 
@@ -146,7 +146,7 @@
         </ul>
     </div>
 
-    <a href="{% url simplekey-page 1 %}"
+    <a href="{% url simplekey %}"
         class="onward-btn">Onward to the Simple Key</a>
 {% endblock %}
 
