--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -1,7 +1,7 @@
 {% extends "simplekey/_new_base.html" %}
 {% load simplekey_extras %}
 
-{% block title %}{{ page.title }}{% endblock %}
+{% block title %}Simple Key{% endblock %}
 
 {% block body_attributes %}id="plant-id" class="claro app"{% endblock %}
 
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block js_require %}
-    require(['simplekey/page']);
+    require(['simplekey/simple']);
 {% endblock %}
 
 {% block body_content %}
