Correct capitalization of pile group breadcrumbs to be sentence-style like those for the piles, and to match headings.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1776 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -22,7 +22,7 @@
             <div id="main">
                 <div id="breadcrumb">
                     <p>You are here: <a href="{% url simplekey %}">Simple Key</a>
-                    &gt; <span>{{ pilegroup.friendly_title }}</span></p>
+                    &gt; <span>{{ pilegroup.friendly_title|lower|capfirst }}</span></p>
                 </div>
                 
                 <h2>Is your plant in one of these subgroups?</h2>
