--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -36,10 +36,10 @@
                     <a href="{% url simplekey %}">Simple Key</a>
                     &gt;
                     <a href="{% url simplekey-pilegroup pilegroup.slug %}"
-                            >{{ pilegroup.friendly_title }}</a>
+                            >{{ pilegroup.friendly_title|lower|capfirst }}</a>
                         &gt; 
                         <a href="{% if last_plant_id_url and pile.slug in last_plant_id_url %}{{ last_plant_id_url }}{% else %}{% url simplekey-pile pilegroup.slug pile.slug %}{% endif %}"
-                            >{{ pile.friendly_title }}</a>
+                            >{{ pile.friendly_title|lower|capfirst }}</a>
                         &gt;
                         <span>{{ scientific_name|italicize_plant|safe }}
                            {# If the above is too long, can use scientific_name_short #}
