Fix bug on pile group page: I'd missed changing a RequireJS reference to simplekey/simple, causing the shadowbox images to break.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1778 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block js_require %}
-    require(['simplekey/page']);
+    require(['simplekey/simple']);
 {% endblock %}
 
 {% block body_content %}
