Change cursor to pointer on the level 3 overlay Get Started button.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1779 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -945,6 +945,7 @@ Styles for results page introductory overlay
 }
 #intro-overlay .get-started {
     background-color: #631121;
+    cursor: pointer;
 }
 #intro-overlay h1 {
     font-weight: bold;
