Improve page title for Simple Key so it will read better in search engine results.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1782 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -1,7 +1,7 @@
 {% extends "simplekey/_new_base.html" %}
 {% load simplekey_extras %}
 
-{% block title %}Simple Key{% endblock %}
+{% block title %}Simple Key for Plant Identification{% endblock %}
 
 {% block body_attributes %}id="plant-id" class="claro app"{% endblock %}
 
