Tweak the colors and appearance of the results intro overlay.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1785 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -159,7 +159,7 @@
                 <h1>Answer questions here</h1>
             </div>
             <div class="get-started">
-                <h1>Get started!</h1>
+                <h1>Get started</h1>
             </div>
         </div>
     </body>
