--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1778,6 +1778,9 @@ div.section.usmap div.trans {
 /*///////////////////////////**
 Getting Started Page Styles
 ////////////////////////////*/
+#getting-started #sidebar .section:last-child {
+    margin-top: 48px;
+}
 #getting-started .question {
 	padding: 18px 0 18px 45px;	
 	border-bottom: 1px solid #e2dfcb;
@@ -1812,9 +1815,14 @@ Getting Started Page Styles
 #getting-started a.screenshot:hover {
 	text-decoration: none;	
 }
+#getting-started a.screenshot img {
+    margin: 10px 0;
+    vertical-align: middle;
+}
 #getting-started a.screenshot img.screenshot-thumb {
+    border: 5px solid #fff;
 	display: block;	
-	margin: 0 0 5px 0;
+	margin: 0;
 	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 	-moz-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 	-webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);	
