Tell people that checking boxes on the Get More Questions dialog is optional.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1802 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -3,12 +3,12 @@
 		<div class="inner">
             <h4 class="heading">What types of things can you tell about your
                 plant?</h4>
+            <p>Optional. Check one or more boxes based on things you
+            can actually see, in order to get the next best
+            questions to answer. Or, just press the button.</p>
 			<div id="choices">
 				<ul class="char-groups">
                 </ul>
-                <!-- The onclick handler needs to be here rather than in the
-                     JS code because this HTML gets copied temporarily by
-                     Shadowbox.js. -->
                 <a class="get-choices">Get More Questions</a>
 				<div class="clearit"></div>
 			</div>
