--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -694,6 +694,11 @@ div.modal-wrap {
 	margin: 0;
     padding: 13px 0 0 20px;
 }
+.modal-wrap .inner p {
+    font-size: 11px;
+    margin: 0;
+    padding: 4px 20px 0;
+}
 .modal-wrap .inner h3.heading {
 	font-style: italic;	
 }
