--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -5,6 +5,9 @@
         <title>{% block title %}{% endblock %}{% block title_suffix %}: Go Botany{% endblock %}</title>
         <meta charset="utf-8">
         <link rel="shortcut icon" href="/static/images/branding/favicon.png">
+    
+        {# This block is for any additional meta or link elements. #}
+        {% block more_meta_link %}{% endblock %}
 
         {# CSS goes here. #}
         {% include "_claro_css.html" %}
