Add a 'wait' spinner to the Level 3 results area while the results initially load. Replace the small questions-area spinner with an improved one.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1815 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -78,6 +78,7 @@
                     <div class="clearit"></div>
 
                     <div class="plant-list">
+                        <div class="wait"></div>
                     </div>
 
                     <p class="list-all hidden"><a>See 
