--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -809,6 +809,25 @@ a.get-more-info:active {
     -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
     -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
 }
+
+.plant-list .plant .img-container .missing-image {
+    background: -moz-linear-gradient(center top , #eaf2e2, #d6e6c5) repeat scroll 0 0 transparent;
+    color: #354d1e;
+    height: 149px;
+    position: relative;
+    width: 160px;
+}
+.plant-list .plant .img-container .missing-image p {
+    height: 40px;
+    left: 50%;
+    line-height: 130%;
+    margin: -20px 0 0 -50px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100px;
+}
+
 .plant p.plant-name {
     font-family: Tahoma, sans-serif; /* Tahoma because it's narrower; less
                                         wrapping and fewer names pushing out
@@ -1365,7 +1384,7 @@ div.working-area .actions {
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eaf2e2), color-stop(100%,#d6e6c5));
     background: -moz-linear-gradient(center top, #eaf2e2, #d6e6c5);
     border: 1px solid #c3d941;
-    color: #638e3a;
+    color: #354d1e;
     cursor: pointer;
     display: block;
     float: left;
