Replace the U.S. distribution map on the species page with the new North America distribution map.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1833 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -216,26 +216,26 @@
                     </object>
                 </div>
 
-                <div class="section usmap">
-                    <h5>U.S. Distribution</h5>
+                <div class="section namap">
+                    <h5>North America Distribution</h5>
                     <div>
                         <object
-                            data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-us-distribution-map.svg"
+                            data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-na-distribution-map.svg"
                             type="image/svg+xml"
                             title="distribution map for {{ scientific_name }}"
-                            id="us-dist-county-map"> <!--<![endif]-->
+                            id="na-dist-county-map"> <!--<![endif]-->
                         <!--[if lt IE 9]>
                         <object
-                            src="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-us-distribution-map.svg"
+                            src="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-na-distribution-map.svg"
                             classid="image/svg+xml"
                             title="distribution map for {{ scientific_name }}"
-                            id="us-dist-county-map"> <![endif]-->
+                            id="na-dist-county-map"> <![endif]-->
                         <!--[if gte IE 9]>
                         <object
-                            data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-us-distribution-map.svg"
+                            data="/api/maps/{{taxon.genus|lower}}-{{specific_epithet}}-na-distribution-map.svg"
                             type="image/svg+xml"
                             title="distribution map for {{ scientific_name }}"
-                            id="us-dist-county-map"> <![endif]-->
+                            id="na-dist-county-map"> <![endif]-->
                         </object>
                     </div>
                     <div class="trans"></div>
