For a bug and story task, remove the default filters from the list of characters that are shown on the plant preview popup and on the brief list of characteristics on the species page. Now those two places are back to only showing plant preview characters instead of a combination of both.
git-svn-id: http://svn.jazkarta.com/newfs-database-api/gobotany/trunk/src@1847 fafe9cc9-101d-4c6e-bffa-87022359e7d1

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -115,7 +115,7 @@
                 </ul>
                 <a class="description-control" href="#" 
                     style="background-image: url(/static/images/icons/plus.png)">Show 
-                    Full Description</a>
+                    All Characteristics</a>
                 <ul class="full-description">
                     {% for character_group in all_characteristics %}
 				        <li>
